<resources>
    <string name="app_name">Android-Shop-App</string>
    <string name="titleText">Frutería</string>
    <string-array name="spinnerContent">
        <item>Plátano</item>
        <item>Uva</item>
        <item>Naranja</item>
        <item>Cereza</item>
    </string-array>
    <string name="select_item_text">Selecciona un producto</string>
    <string name="item_fruit_description">Fruit item image</string>
    <string name="quantity_text">Selecciona el número de unidades</string>
    <string name="price_text">Precio: </string>
    <string name="monetary_unit">€</string>
    <string name="add_basket_button">Comprar</string>
    <string name="default_price">Total: 0 €</string>
    <string name="footer">by Daniel Hervás Rodao</string>

    <!-- Toolbar Menu -->
    <string name="toolbar_inicio">Inicio</string>
    <string name="toolbar_fruit_shop">Frutas</string>
    <string name="shop_toolbar">Comprar</string>
    <string name="communications_toolbar">Comunicaciones</string>
    <string name="toolbar_chat">Chat</string>
    <string name="toolbar_messages_sent">Mensajes enviados</string>
    <string name="toolbar_inbox">Inbox</string>
    <string name="toolbar_sports_shop">Deportes</string>
    <string name="butcher_shop_text">Carnicería</string>
    <string name="fish_shop_title">Pescadería</string>

    <string name="escaparate_content_description">Escaparate vacío</string>

    <string name="landing_fragment_text">Bienvenid@</string>
    <string name="landing_text_description">
        Este es un ejemplo de una aplicación de Android que ofrece una serie de tiendas.
        Para comenzar, selecciona una tienda de la lista y comienza a comprar!</string>

    <string name="username_hint">Usuario</string>
    <string name="login_button_text">Login</string>

    <!-- Product Details Fragment -->
    <string name="product_icon_description">Product icon</string>

    <!-- Chat Fragment -->
    <string name="chat_fragment_title">Chat</string>
    <string name="chat_input_hint">Escribe un mensaje</string>
    <string name="chat_button_description">Enviar</string>

    <!-- Message layouts -->
    <string name="message_user_icon">User Icon</string>
    <string name="sports_shop_text">Tienda de deportes</string>

    <string name="global_basket_price">Carrito</string>
    <string name="global_basket_text">Carrito</string>
    <string name="snack_bar_text">Elemento eliminado</string>
    <string name="snack_bar_undo_text">UNDO</string>
    <string name="login_text">Login</string>
    <string name="username_title">Nombre de usuario</string>
    <string name="password_title">Contraseña</string>
    <string name="login_button">Login</string>
    <string name="register_text">SignUp</string>
    <string name="name_field">Name</string>
    <string name="surname_field">Surname</string>
    <string name="register_button">SignUp</string>
    <string name="orders_title">Pedidos</string>
    <string name="order_basket_text">Pedidos</string>
</resources>