<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dhrodao.androidshop.fragment.login.LoginFragment"
    android:id="@+id/login_fragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_text"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/name_field"
        android:inputType="text" />

    <EditText
        android:id="@+id/surname_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="surname"
        android:hint="@string/surname_field"
        android:inputType="text"/>

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/username_title"
        android:inputType="text"
        android:tooltipText="@string/username_title" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password_title"
        android:inputType="textPassword"
        android:tooltipText="@string/password_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>