<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dhrodao.androidshop.fragment.login.LoginTabFragment"
    android:id="@+id/login_tab_fragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_text"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tooltipText="@string/username_title"
        android:hint="@string/username_title"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tooltipText="@string/password_title"
        android:hint="@string/password_title"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>